--- a/Mercado/View/Base.lproj/Main.storyboard
+++ b/Mercado/View/Base.lproj/Main.storyboard
@@ -164,7 +164,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="R4q-Yf-YEm">
-                                <rect key="frame" x="0.0" y="88" width="414" height="625"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CheckoutItemTableViewCell" id="K1W-bz-jD3" customClass="CheckoutItemTableViewCell" customModule="Mercado" customModuleProvider="target">
@@ -240,27 +240,12 @@
                                     <outlet property="delegate" destination="4iq-Ll-4Og" id="hDQ-o8-AoZ"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qs8-yd-C49">
-                                <rect key="frame" x="132" y="733" width="150" height="40"/>
-                                <color key="backgroundColor" red="0.0" green="0.40784313729999999" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="XKS-9g-9vh"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Xbr-Te-pIq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <state key="normal" title="Continue"/>
-                                <connections>
-                                    <action selector="continueDidTap:" destination="4iq-Ll-4Og" eventType="touchUpInside" id="veT-l9-8QO"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="sTK-WW-vwp" firstAttribute="trailing" secondItem="R4q-Yf-YEm" secondAttribute="trailing" id="Lvl-aO-96z"/>
                             <constraint firstItem="R4q-Yf-YEm" firstAttribute="leading" secondItem="sTK-WW-vwp" secondAttribute="leading" id="QGI-69-k5S"/>
-                            <constraint firstItem="sTK-WW-vwp" firstAttribute="bottom" secondItem="qs8-yd-C49" secondAttribute="bottom" constant="40" id="UUt-ZV-skP"/>
-                            <constraint firstItem="qs8-yd-C49" firstAttribute="centerX" secondItem="sTK-WW-vwp" secondAttribute="centerX" id="VTj-wb-S71"/>
-                            <constraint firstItem="qs8-yd-C49" firstAttribute="top" secondItem="R4q-Yf-YEm" secondAttribute="bottom" constant="20" id="ehp-mT-BEK"/>
+                            <constraint firstItem="sTK-WW-vwp" firstAttribute="bottom" secondItem="R4q-Yf-YEm" secondAttribute="bottom" id="nVb-SI-WVn"/>
                             <constraint firstItem="R4q-Yf-YEm" firstAttribute="top" secondItem="sTK-WW-vwp" secondAttribute="top" id="ocO-LL-u9X"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sTK-WW-vwp"/>
